# jaraco.media

./: .hgignore  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  ffmpeg_splicer.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
docs/: conf.py  index.rst
jaraco/media/: arguments.py  concat.py  config.py  cropdetect.py  dvd.py  dvd_info.py  handbrake.py  index.py  isapiapp.py  makemkv.py  matroska.py  multibrake.py  splice.py  srt-concat.py  srt.py
jaraco/media/tests/: multi title output.txt  test_handbrake.py
newsfragments/: +01d3b21e.feature.rst  +c373b7e5.bugfix.rst  2.bugfix.rst
scripts/: adjust-sub.py  isapiapp.py
