[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.media"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "DVD and other multimedia tools"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"jaraco.text >= 3.4",
	"jaraco.ui",
	"jaraco.path >= 3.1",
	"jaraco.functools",
	"jaraco.itertools >= 6.2",
	"httpagentparser",
	"more_itertools",
	"path",
	"inflect",
	'importlib_metadata; python_version < "3.8"',
	"autocommand",
	"tempora",
	"jaraco.packaging >= 10.1",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/jaraco.media"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"cherrypy",
	"genshi",
	"importlib_resources",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 2.2",
]

type = [
	# upstream
	"pytest-mypy",

	# local
	"types-pywin32"
]


[project.scripts]
encode-dvd = "jaraco.media.dvd:encode_dvd"
rip-subtitles = "jaraco.media.dvd:rip_subtitles"
crop-detect = "jaraco.media.cropdetect:execute"
dvd-info = "jaraco.media.dvd_info:main"
transcode = "jaraco.media.dvd:transcode"
fix-fourcc = "jaraco.media.dvd:fix_fourcc"
serve-index = "jaraco.media.index:serve"
multibrake = "jaraco.media.handbrake:multibrake"
quick-brake = "jaraco.media.handbrake:quick_brake"
mkv-to-mp4 = "jaraco.media.matroska:handle_command_line"
adjust-sub = "jaraco.media.srt:AdjustCommand.run"
update-anydvd = "jaraco.media.dvd:update_anydvd"


[tool.setuptools_scm]
