[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.media
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = DVD and other multimedia tools
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.media
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	jaraco.itertools
	jaraco.text
	jaraco.ui
	jaraco.context
	httpagentparser
	six
	more_itertools
	path.py
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	cherrypy
	mock
	genshi
docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	encode-dvd = jaraco.media.dvd:encode_dvd
	rip-subtitles = jaraco.media.dvd:rip_subtitles
	crop-detect = jaraco.media.cropdetect:execute
	dvd-info = jaraco.media.dvd_info:main
	transcode = jaraco.media.dvd:transcode
	fix-fourcc = jaraco.media.dvd:fix_fourcc
	serve-index = jaraco.media.index:serve
	multibrake = jaraco.media.handbrake:multibrake
	quick-brake = jaraco.media.handbrake:quick_brake
	mkv-to-mp4 = jaraco.media.matroska:handle_command_line
	adjust-sub = jaraco.media.srt:AdjustCommand.run
	update-anydvd = jaraco.media.dvd:update_anydvd
