[metadata]
license_file = LICENSE
name = jaraco.media
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = DVD and other multimedia tools
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.media
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	jaraco.itertools
	jaraco.text >= 3.4
	jaraco.ui
	jaraco.context
	httpagentparser
	more_itertools
	path
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local
	cherrypy
	mock
	genshi
docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	encode-dvd = jaraco.media.dvd:encode_dvd
	rip-subtitles = jaraco.media.dvd:rip_subtitles
	crop-detect = jaraco.media.cropdetect:execute
	dvd-info = jaraco.media.dvd_info:main
	transcode = jaraco.media.dvd:transcode
	fix-fourcc = jaraco.media.dvd:fix_fourcc
	serve-index = jaraco.media.index:serve
	multibrake = jaraco.media.handbrake:multibrake
	quick-brake = jaraco.media.handbrake:quick_brake
	mkv-to-mp4 = jaraco.media.matroska:handle_command_line
	adjust-sub = jaraco.media.srt:AdjustCommand.run
	update-anydvd = jaraco.media.dvd:update_anydvd
